tests/fixtures/valid/escape_backslash.mmd
flowchart TD
    Start --> A[println 'backslash: \\\\']
    A --> End
