tests/fixtures/invalid/missing_start.mmd
flowchart TD
    A[x = 1] --> B[println x]
    B --> End
